terraform-practice/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "ap-northeast-1"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "terraform-practice-vpc"
  }
}

resource "aws_subnet" "main" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "ap-northeast-1a"

  tags = {
    Name = "terraform-practice-subnet"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "terraform-practice-igw"
  }
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "terraform-practice-rtb"
  }
}

resource "aws_route_table_association" "main" {
  subnet_id       = aws_subnet.main.id
  route_table_id  = aws_route_table.main.id
}

resource "aws_security_group" "main" {
  name          = "terraform-practice-sg"
  vpc_id        = aws_vpc.main.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform-practice-sg"
  }
}

resource "aws_key_pair" "main" {
  key_name    = "terraform-key"
  public_key  = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+zSni65ny0keoMCgdlSdYJ41piQuCzHAgd1Lj+t+P2w5UcDu+yxwulRLWVsARmBj3HgKhqlP2WSoC0SbvdjiyY7XdV1StjIIVNYwLhWpiURFgmmUMvbtsRNHw82XUyrxg4Tj1sdDzDUk3Bx2KQbYmstUtz7VkfwHpTodrLxRio32Mj0xZgJ+GcnKqc7i8hG+YSI15MHP+S9vToOdBbNiyoEDRoA02ktq3dTOPbNHhI+DVMtrKnisqVWE+fgAEtxwcYPIHgqP5bminFfl79MlNRtJFf/NitHBGYmRf3CqGuDnzV4WhqSjSoCneHlPVnHSBO9z8jsJ8UEpWaQ4OhWstnuj0NNE10NcjdZJ8l1AKiiPPxaxt5UINGaREpXstfvzRtSzqJbsxGpfxpPyGUVDjMWee9371bxrxdBhFH1fD+cBLuutjjlzyNtJkAMu [...]
}

resource "aws_instance" "main" {
  ami                         = "ami-0599b6e53ca798bb2"
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.main.id
  vpc_security_group_ids      = [aws_security_group.main.id]
  key_name                    = aws_key_pair.main.key_name
  associate_public_ip_address = true

  tags = {
    Name = "terraform-practice-ec2"
  } 
}
